welcome.lessons.welcome.bat.bool2.MaxMod5.scala.error
maxMod5:9: error: '(' expected but 'if' found.
    if if (a>=b) {
       ^maxMod5:12: error: illegal start of simple expression
  } 
  ^